--- a/index.html
+++ b/index.html
@@ -260,7 +260,8 @@
         Para usar a CapyDeal, cole abaixo sua <strong>GEMINI_API_KEY</strong> gerada no Google AI Studio.
       </p><p>Acesse o link abaixo para criar sua chave de API gratuita:</p>
       <p>
-        <a href="[https://ai.google.com/studio](https://ai.google.com/studio)" target="_blank" rel="noopener noreferrer" ><strong>[https://ai.google.com/studio](https://ai.google.com/studio)</strong></a>
+        <a href="https://aistudio.google.com/app/api-keys" target="_blank" rel="noopener noreferrer" >
+          <strong>ai.google.com/studio</strong></a>
       </p>
       <input
         id="api-key-modal"
