--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
           <span class="logo-text">Deal/Black</span>
         </div>
         <p class="subtitle">
-          Busca inteligente de preços e produtos usando IA.
+          Busca inteligente de preços e produtos usando IA. FREE</p>
+        <p><strong>PARA VOCÊ NÃO SE PRENDER COM PREÇO FAKE</strong></p>
         </p>
       </div>
       <div class="header-actions">
